--- a/Moodify/pom.xml
+++ b/Moodify/pom.xml
@@ -13,5 +13,19 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    
+    <build>
+        <plugins>
+            
+            <plugin>
+                 <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <mainClass>com.tool.view.MainFrame</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
