added actualy muic play
users can now play youtube songs through moodify

--- a/Moodify/pom.xml
+++ b/Moodify/pom.xml
@@ -14,6 +14,15 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     
+    <!-- VLC Player dependecy -->
+    <dependencies>
+        <dependency>
+            <groupId>uk.co.caprica</groupId>
+            <artifactId>vlcj</artifactId>
+            <version>4.11.0</version>
+        </dependency>
+    </dependencies>
+    
     <build>
         <plugins>
             
